== 3.0.0.alpha.10
  Javascript file fixes
  Added QUnit test suite

== 3.0.0.alpha.9
  I'm an idiot. I yanked alpha.8 by mistake

== 3.0.0.alpha.8
  Range JSON fix
  Handle nested resources for uniqueness validator
  Don't repeat validation if value hasn't changed
  Fix for :on => :create & :on => :update

== 3.0.0.alpha.7
  Regex JSON fix
  Javascript Function metaprogramming fix

== 3.0.0.alpha.6
  Fix for data-validators parsing
  Fix for length Javscript validator

== 3.0.0.alpha.5
  Formtastic support

== 3.0.0.alpha.4
  fields_for now inherits :validate option from parent
  SimpleForm support
  Added adapters for error field detach and apply functions

== 3.0.0.alpha.3
  Turn off client side validations per field
  Support remote forms
  Fix load order issue with conflicting gems

== 3.0.0.alpha.2
  Ruby 1.8.7 support

== 3.0.0.alpha.1
  Complete rewrite!
