@@ -1,6 +1,7 @@
 == 3.0.0.alpha.10
   Javascript file fixes
   Added QUnit test suite
+  Added QUnit tests for validators
 
 == 3.0.0.alpha.9
   I'm an idiot. I yanked alpha.8 by mistake
